<resources>
    <string name="app_name">PointTreeUser</string>
    <string name="title_activity_main">PointTree</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Search bar related -->
    <string name="search_hint">搜尋集點卡或店家</string>
    <string name="title_activity_search">SearchActivity</string>

    <!-- Overview related -->
    <string name="accumulated_score">累積養分</string>
    <string name="collect_point">QRcode 集點數</string>

    <!-- Card detail related -->
    <string name="card_info">集點卡資訊</string>
    <string name="event_description">活動說明：</string>
    <string name="store_info">商店資訊</string>
    <string name="store_menu">Menu</string>
    <string name="send_friends">送點數給朋友</string>
    <string name="title_activity_card_detail">CardDetailActivity</string>
    <string name="redeem_item">兌換飲料</string>
    <string name="redemption_period">兌換期限：</string>

    <!-- User query related -->
    <string name="enter_friend_number">請輸入朋友編號</string>
    <string name="enter_friend_mobile_number">請輸入朋友的電話號碼</string>
    <string name="scan_qrcode_text">開始掃瞄</string>
    <string name="title_activity_user_query">UserQueryActivity</string>

    <!-- Send point related -->
    <string name="available_point">可選擇點數</string>
    <string name="choose_store">請選擇點數店家</string>
    <string name="confirm">確認</string>
    <string name="confirm_and_send">確認送出</string>
    <string name="current_store">目前店家</string>
    <string name="title_activity_send_point">SendPointActivity</string>
    <string name="not_this_user">不是這位朋友</string>
    <string name="please_select">請選擇</string>
    <string name="select_point">請選擇要送出的點數量</string>
    <string name="send_to_this_user">要將點數送給這位朋友嗎？</string>
    <string name="sending_point_number">送出的點數量</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Card Collection Fragment-->
    <string name="delete">刪除</string>
    <string name="cancel_favorite">取消常用</string>

    <!--Setting Fragment-->
    <string name="account_setting">帳號設定</string>
    <string name="about_us">關於我們</string>
    <string name="logout">登出</string>
    <string name="notification">通知</string>
    <string name="point_record">點數紀錄</string>
    <string name="privacy_rule">隱私權法規</string>
    <string name="problem_report">問題回報</string>
    <string name="user_name_setting">設定用戶名稱</string>
    <string name="insert_new_user_name">請輸入新的用戶名稱</string>

    <!-- Login, Register activities -->
    <string name="forget_password_button_text">忘記密碼</string>
    <string name="login_button_text">登入</string>
    <string name="login_password_hint">密碼</string>
    <string name="login_mobile_hint">帳號</string>
    <string name="register_birthday_hint">設定生日</string>
    <string name="register_button_text">註冊</string>
    <string name="register_confirm_button_text">確定註冊</string>
    <string name="register_header">註冊帳號</string>
    <string name="register_invalid_mobile_toast">手機號碼格式錯誤</string>
    <string name="register_invalid_password_toast">密碼不符合</string>
    <string name="register_mobile_hint">請輸入您的手機號碼</string>
    <string name="register_next_step_button_text">下一步</string>
    <string name="register_password_hint">請設定您的密碼</string>
    <string name="register_password_again_hint">請再輸入一次您的密碼</string>
    <string name="register_sex_hint">選擇性別</string>
    <string name="register_user_name_hint">您想顯示的暱稱</string>
    <string name="title_activity_register">RegisterActivity</string>

    <!-- QRcode related -->
    <string name="title_activity_qrcode">QRCodeActivity</string>
    <string name="qrcode_description">這是您帳號的QRcode，\n若要接受朋友贈送的點數，\n也是以此QRcode接收唷！</string>

    <!-- Phone Auth activity -->
    <string name="auth_title">確定註冊</string>
    <string name="phone_auth_title">註冊帳號</string>
    <string name="phone_auth_content">驗證碼簡訊已寄至您填寫的手機號碼</string>
    <string name="phone_auth_hint">請輸入驗證碼</string>
    <string name="phone_auth_not_receive_text">沒收到驗證碼？</string>
    <string name="phone_auth_send_again_text">再寄一次</string>
</resources>
