<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tw.com.pointtree.pointtreeuser.activities.PhoneAuthActivity"
    android:background="@color/registerBackgroundColor">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_auth_title"
        android:textColor="@color/white"
        android:layout_above="@+id/content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:id="@+id/title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_auth_content"
        android:layout_above="@+id/not_receive"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:id="@+id/content"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_auth_not_receive_text"
        android:id="@+id/not_receive"
        android:layout_above="@+id/auth_code"
        android:layout_alignStart="@+id/content"
        android:textColor="@color/white"
        android:layout_marginBottom="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_auth_send_again_text"
        android:id="@+id/send_again"
        android:layout_alignTop="@+id/not_receive"
        android:layout_toEndOf="@+id/not_receive"
        android:textColor="@color/white"
        android:layout_marginLeft="20dp" />

    <EditText
        android:layout_width="@dimen/phone_auth_content_width"
        android:layout_height="@dimen/rounded_edit_text_height"
        android:background="@drawable/rounded_8dp_background"
        android:id="@+id/auth_code"
        android:layout_centerInParent="true"
        android:hint="@string/phone_auth_hint"
        android:paddingRight="12dp"
        android:paddingLeft="12dp"
        android:inputType="number" />

    <Button
        android:layout_width="@dimen/phone_auth_content_width"
        android:layout_height="wrap_content"
        android:id="@+id/auth_code_button"
        android:layout_below="@+id/auth_code"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_8dp_background"
        android:textColor="@color/buttonTextColor"
        android:text="@string/auth_title" />

</RelativeLayout>
