<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.RegisterActivity$RegisterStep1Fragment"
    android:background="@drawable/login_background">

    <TextView
        android:id="@+id/register_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:textColor="@color/white"
        android:text="@string/register_header" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="@dimen/register_content_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:id="@+id/linear_layout"
        android:background="@drawable/rounded_8dp_background"
        android:paddingRight="12dp"
        android:paddingLeft="12dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/rounded_edit_text_height"
            android:id="@+id/mobileNumber"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/editTextPlaceHolder"
            android:background="@null"
            android:hint="@string/register_mobile_hint"
            android:textColorHint="@color/editTextPlaceHolder"
            android:inputType="phone" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c4c4c4" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/rounded_edit_text_height"
            android:id="@+id/password"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/editTextPlaceHolder"
            android:background="@null"
            android:hint="@string/register_password_hint"
            android:textColorHint="@color/editTextPlaceHolder"
            android:inputType="textPassword" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c4c4c4" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/rounded_edit_text_height"
            android:id="@+id/passwordConfirm"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/editTextPlaceHolder"
            android:background="@null"
            android:hint="@string/register_password_again_hint"
            android:textColorHint="@color/editTextPlaceHolder"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:layout_width="@dimen/register_content_width"
        android:layout_height="wrap_content"
        android:id="@+id/nextStepButton"
        android:layout_below="@+id/linear_layout"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_8dp_background"
        android:layout_marginTop="12dp"
        android:textColor="@color/buttonTextColor"
        android:text="@string/register_next_step_button_text" />

</RelativeLayout>
