<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shadow_card"
    tools:context=".fragments.ConfirmUserFragment">

    <!-- TODO: should be rounded image and should add default user image -->
    <ImageView
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal" />

    <!-- TODO: should get real user name from server -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_user"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_to_this_user"
        android:layout_marginTop="80dp"
        android:textColor="@color/colorCardDetailPagerIndicator"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_user_button"
        android:text="@string/confirm"
        style="@style/AppTheme.ConfirmButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/not_this_user"
        android:text="@string/not_this_user"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorConfirmUserText"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
