<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tw.com.pointtree.pointtreeuser.fragments.SettingFragment"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="181dp"
        android:weightSum="1"
        android:background="@color/lightTeal">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp">

            <ImageView
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:id="@+id/imageView"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/abc_cab_background_top_material"
                android:cropToPadding="false"
                android:layout_marginTop="22dp" />

            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:minHeight="120dp"
                android:minWidth="120dp"
                android:cropToPadding="false"
                android:src="@drawable/image_cover_circle" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="-20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NAME"
                android:id="@+id/nameTextView"
                android:textColor="@color/primary_text_default_material_dark"
                android:layout_gravity="center" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton"
                android:background="@drawable/edit_icon"
                android:layout_marginStart="3dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ID: 123456789"
            android:id="@+id/idTextView"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/primary_text_default_material_dark" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/point_record"
            android:id="@+id/pointRecordButton"
            android:layout_weight="1"
            android:background="@color/lightTeal"
            android:textColor="@color/white" />

        <Space
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/account_setting"
            android:id="@+id/accountSettingButton"
            android:layout_weight="1"
            android:background="@color/duckEggBlue"
            android:textColor="@color/seafoamBlue" />

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pointRecordListVIew"
        android:visibility="visible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/accountSettingScrollView"
        android:background="@color/paleGrey"
        android:visibility="gone">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <Switch
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/notification"
                android:id="@+id/notification"
                android:layout_gravity="center_horizontal"
                android:checked="false"
                android:background="@color/white"
                android:layout_marginTop="1dp"
                android:paddingStart="15dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="25dp"
                android:background="@color/white"
                android:id="@+id/about_us">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="15dp"
                    android:layout_weight="9"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=">"
                    android:layout_weight="0.5"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:layout_marginTop="1dp"
                android:id="@+id/problem_report">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/problem_report"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="15dp"
                    android:layout_weight="9"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=">"
                    android:layout_weight="0.5"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="1dp"
                android:background="#fafafa"
                android:id="@+id/privacy_rule">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_rule"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="15dp"
                    android:layout_weight="9"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=">"
                    android:layout_weight="0.5"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="25dp"
                android:background="@color/white"
                android:id="@+id/logout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="15dp"
                    android:layout_weight="9"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=">"
                    android:layout_weight="0.5"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ver. 0.0.0"
                android:id="@+id/version"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="5dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
